<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            style="@style/ToolBarStyle"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/email_edittext"
        app:layout_constraintBottom_toTopOf="@id/email_edittext"
        android:text="@string/e_mail_title"
        android:textColor="@color/dark_brown_color"
        android:textSize="15sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        style="@style/RoundedEditTextStyle"
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="190dp"
        android:hint="@string/login_hint_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="13dp"
        android:layout_marginHorizontal="18dp"
        android:paddingHorizontal="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/password_edittext"
        app:layout_constraintBottom_toTopOf="@id/password_edittext"
        android:text="@string/password_textview_title"
        android:textColor="@color/dark_brown_color"
        android:textSize="15sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        style="@style/RoundedEditTextStyle"
        android:inputType="textPassword"
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_edittext"
        android:layout_marginTop="50dp"
        android:hint="@string/password_hint_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="13dp"
        android:layout_marginHorizontal="18dp"
        android:paddingHorizontal="18dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        android:text="@string/login_button_text"
        android:textSize="18sp"
        android:textColor="@color/brown_button_text_color"
        android:backgroundTint="@color/brown_button_color"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="30dp"
        android:paddingVertical="13dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registration_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_button_text_string"
        android:textColor="@color/blue_button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>