<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/ToolBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_toolbar_title" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/email_edittext"
    app:layout_constraintBottom_toTopOf="@id/email_edittext"
    android:text="@string/e_mail_title"
    android:textColor="@color/dark_brown_color"
    android:textSize="15sp"
    android:layout_marginBottom="8dp"/>


    <EditText
        style="@style/RoundedEditTextStyle"
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="190dp"
        android:hint="@string/login_hint_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="13dp"
        android:layout_marginHorizontal="18dp"
        android:paddingHorizontal="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/password_edittext"
        app:layout_constraintBottom_toTopOf="@id/password_edittext"
        android:text="@string/password_textview_title"
        android:textColor="@color/dark_brown_color"
        android:textSize="15sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        style="@style/RoundedEditTextStyle"
        android:inputType="textPassword"
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_edittext"
        android:layout_marginTop="50dp"
        android:hint="@string/password_hint_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="13dp"
        android:layout_marginHorizontal="18dp"
        android:paddingHorizontal="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/repeat_password_title"
        android:textColor="@color/dark_brown_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/repeat_password_edittext"
        app:layout_constraintStart_toStartOf="@id/repeat_password_edittext" />

    <EditText
        style="@style/RoundedEditTextStyle"
        android:inputType="textPassword"
        android:id="@+id/repeat_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_edittext"
        android:layout_marginTop="50dp"
        android:hint="@string/password_hint_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="13dp"
        android:layout_marginHorizontal="18dp"
        android:paddingHorizontal="18dp" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/brown_button_color"
        android:paddingVertical="13dp"
        android:text="@string/registration_toolbar_title"
        android:textColor="@color/brown_button_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>